2019-1/221/users/3062/executions/1653_2447.log
== TEST (2019-04-15 18:55:47) 
-- CODE:
a = float(input("preço: "))
b = float(input("pagamento: "))
x = a - b
if(a>b):
	print("falta", x)
else:
	
-- ERROR:
File "XXXX", line 8
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:56:39) 
-- CODE:
a = float(input("preço: "))
b = float(input("pagamento: "))
x = a - b
c = b -a
if(a>b):
	print("falta", x)
else:
	print("troco", y)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:56:50) 
-- CODE:
a = float(input("preco: "))
b = float(input("pagamento: "))
x = a - b
c = b -a
if(a>b):
	print("falta", x)
else:
	print("troco", y)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:57:12) 
-- CODE:
a = float(input("preco: "))
b = float(input("pagamento: "))
x = a - b
c = b -a
if(a>b):
	print("falta", x)
else:
	print("troco", c)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:57:29) 
-- CODE:
a = float(input("preco: "))
b = float(input("pagamento: "))
x = a - b
c = b -a
if(a>b):
	print("falta", x)
else:
	print("troco", c)
-- EXECUTION TIME:
0.13935
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:57:37) 
-- CODE:
a = float(input("preco: "))
b = float(input("pagamento: "))
x = a - b
c = b -a
if(a>b):
	print("falta", x)
else:
	print("troco de", c)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:57:52) 
-- CODE:
a = float(input("preco: "))
b = float(input("pagamento: "))
x = a - b
c = b -a
if(a>b):
	print("falta", x)
else:
	print("troco de", c)
-- EXECUTION TIME:
0.136947
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:57:58) 
-- CODE:
a = float(input("preco: "))
b = float(input("pagamento: "))
x = a - b
c = b -a
if(a>b):
	print("falta", x)
else:
	print("Troco de", c)
-- OUTPUT:
falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:58:10) 
-- CODE:
a = float(input("preco: "))
b = float(input("pagamento: "))
x = a - b
c = b -a
if(a>b):
	print("falta", x)
else:
	print("Troco de", c)
-- EXECUTION TIME:
0.138992
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:00:20) 
-- CODE:
a = float(input("preco: "))
b = float(input("pagamento: "))
x = a - b
c = b -a
if(a>b):
	print(round(("falta", x),2)
else:
	print(round("Troco de", c), 2)
-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:03:38) 
-- CODE:
a = float(input("preco: "))
b = float(input("pagamento: "))
x = "falta" a - b
c = "Troco de" b -a
if(a>b):
	print(round(x, 2))
else:
	print(round(c, 2))
-- ERROR:
File "XXXX", line 3
    x = "falta" a - b
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:05:25) 
-- CODE:
a = float(input("preco: "))
b = float(input("pagamento: "))
x = a - b
c = b - a
if(a>b):
	print(round("Flta" x, 2))
else:
	print(round("Troco de" c, 2))
-- ERROR:
File "XXXX", line 6
    print(round("Flta" x, 2))
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:06:32) 
-- CODE:
a = float(input("preco: "))
b = float(input("pagamento: "))
x = a - b
c = b - a
if(a>b):
	print(round("Falta",x, 2))
else:
	print(round("Troco de",c, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round("Falta",x, 2))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:08:16) 
-- CODE:
a = float(input("preco: "))
b = float(input("pagamento: "))
x = a - b
c = b - a
if(a>b):
	print("Falta", round(x, 2))
else:
	print("Troco de", round(c, 2))
-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:08:29) 
-- CODE:
a = float(input("preco: "))
b = float(input("pagamento: "))
x = a - b
c = b - a
if(a>b):
	print("Falta", round(x, 2))
else:
	print("Troco de", round(c, 2))
-- EXECUTION TIME:
0.144687
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
